Exp-2/output/hf-eval-data-v3/f00549_generate_image.err
  File "./f00549_generate_image.py", line 24
    image.save(f'{prompt.replace(' ', '_')}_sign.png')
                                       ^
SyntaxError: invalid syntax
